<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App -->
    <string name="app_name">Netflix CMS</string>
    <string name="app_title">Netflix +</string>
    <string name="title_activity_library">Library</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome_to_netflixplus">Welcome to NetflixPlus</string>

    <!-- Authentication -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in_now">I already have an account</string>
    <string name="register_now">I don\'t have an account yet</string>

    <!-- Menu Items -->
    <string name="menu_file_upload">File Upload</string>
    <string name="menu_library">Library</string>
    <string name="menu_users">Users</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_beta_label">Beta</string>

    <!-- Search -->
    <string name="search_movie_hint">Search for a movie</string>
    <string name="search_movies">Search movies</string>
    <string name="progress_indicator">Logging in, please wait</string>

    <!-- Create Users -->
    <string name="password_hint">Entre password</string>
    <string name="email_hint">Enter email</string>

    <!-- Movie Upload Form -->
    <string name="movie_title_hint">Movie Title</string>
    <string name="movie_description_hint">Movie Description</string>
    <string name="movie_genre_hint">Movie Genre</string>
    <string name="movie_year_hint">Movie Year</string>
    <string name="movie_publisher_hint">Movie Publisher</string>
    <string name="movie_duration_hint">Movie Duration (minutes)</string>
    <string name="description_header">Description</string>

    <!-- Actions -->
    <string name="submit">Submit</string>
    <string name="close_button">Close</string>
    <string name="select_video">Select Video</string>
    <string name="select_thumbnail">Select Thumbnail</string>

    <!-- Content Descriptions -->
    <string name="background_image_description">background image</string>
    <string name="movie_list">List of movies</string>
    <string name="genre_spinner">Genre selection</string>
    <string name="loading_indicator">Loading content</string>
    <string name="refresh_content">Refresh content</string>
    <string name="upload_icon_desc">Upload file button</string>
    <string name="library_icon_desc">Library button</string>
    <string name="users_icon_desc">Users button</string>
    <string name="settings_icon_desc">Settings button</string>
    <string name="email_input_desc">Email input field</string>
    <string name="password_input_desc">Password input field</string>
    <string name="login_button_desc">Login button</string>
    <string name="upload_video_desc">Upload video</string>
    <string name="upload_thumbnail_desc">Upload thumbnail</string>
    <string name="submit_button_desc">Submit user information</string>
    <string name="movie_thumbnail_desc">Movie thumbnail</string>
    <string name="movie_title_desc">Movie title</string>
    <string name="movie_description_desc">Movie description</string>
    <string name="movie_genre_desc">Movie genre</string>
    <string name="movie_year_desc">Release year</string>
    <string name="movie_duration_desc">Movie duration</string>
    <string name="close_button_desc">Close movie details</string>

    <!-- Settings-->
    <string name="select_language">Select Language</string>
    <string name="select_theme">Select Theme</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings_title">Settings</string>
    <string name="settings_subtitle">Customize your app preferences</string>
    <string name="settings_saved">Settings saved successfully</string>

    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_portuguese">Portuguese</string>

    <!-- Themes -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="delete_movie">Delete movie</string>
    <string name="create_new_user_button">Create new user button</string>
    <string name="create_new_admin_account">Create new admin account</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="create_new_account">Create new account</string>

    <!-- Arrays -->
    <string-array name="languages">
        <item>@string/language_english</item>
        <item>@string/language_portuguese</item>
    </string-array>

    <string-array name="themes">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>

</resources>